// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolveConfig gets default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "Icon",
    "fill": "currentColor",
  },
  "baseMapProps": Object {
    "center": Object {
      "style": Object {
        "position": "relative",
        "top": "calc(-1em * 1/6)",
        "verticalAlign": "middle",
      },
    },
    "text": Object {
      "size": "1.2em",
    },
  },
  "baseTemplate": [Function],
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "svgoPlugins": Array [],
  "template": [Function],
}
`;

exports[`resolveConfig overwrites default config 1`] = `
Object {
  "baseDefaultProps": Object {
    "defaultClassName": "MyIcon",
    "fill": "currentColor",
  },
  "baseMapProps": Object {
    "center": Object {
      "style": Object {
        "position": "relative",
        "top": "calc(-1em * 1/6)",
        "verticalAlign": "middle",
      },
    },
    "text": Object {
      "size": "1.2em",
    },
  },
  "baseTemplate": [Function],
  "defaultProps": Object {},
  "filenameTemplate": [Function],
  "svgoPlugins": Array [
    Object {
      "removeAttrs": Object {
        "attrs": "fill",
      },
    },
  ],
  "template": [Function],
}
`;
